services/wms-service/k8s/wms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wms-service
  namespace: odin
  labels:
    app: wms-service
spec:
  type: ClusterIP
  selector:
    app: wms-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: management
      port: 8081
      targetPort: 8081
      protocol: TCP
