services/wms-service/k8s/wms/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wms-service-ingress
  namespace: odin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wms.odin.internal
      secretName: wms-tls-secret
  rules:
    - host: wms.odin.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wms-service
                port:
                  number: 80
